syntax = "proto3";

package proto;

option java_package = "com.lsm1998.chat.proto";
option java_outer_classname = "DataProto";

// 请求类型枚举
enum MsgType {
    ACK_MSG = 0; // ACK确认
    HANDSHAKE_MSG=1; // 握手
    SEND_MSG = 2; // 发送消息
    BROADCAST_MSG = 3; // 广播消息
    SYSTEM_SEND_MSG =4; // 系统消息
    SYSTEM_BROADCAST_MSG =5; // 系统广播
}

message MsgReq {
    MsgType msgType = 1;

    oneof Pack {
        AckReq ackReq = 2;
        HandShakeReq handShakeReq = 3;
        SendMsgReq sendMsgReq = 4;
    }
}

message MsgRsp {
    MsgType msgType = 1;

    oneof Pack {
        AckRsp ackRsp = 2;
        HandShakeRsp handShakeRsp = 3;
        SendMsgRsp sendMsgRsp = 4;
    }
}

// ack确认
message AckReq{
}
message AckRsp{
    int32 code=1; // 响应码
}

// 握手
message HandShakeReq{
    string token=1; // 令牌
}
message HandShakeRsp{
    int32 code=1; // 响应码
    string aes_key=2; // 加密密钥
}

// 发送消息
message SendMsgReq{
    int64 id=1;
    int64 to_id=2;
    int64 form_id=3;
    string content=4;
    int32 time=5;
}
message SendMsgRsp{
    int32 code=1; // 响应码
}


